# secular

./: .gitignore  .gitmodules  Makefile  README.md  index.html  index2.html  screen1.html  screen2.html  screen3.html  screen4.html  screen5.html  secular-release.jks  server.py  servers.json
.cargo/: config.toml
.github/workflows/: build-native-lib.yml  ci.yml  diagnostic.yml  release.yml
docs/: index.html
docs/architecture/: overview.md
docs/architecture/decisions/: 0001-deprecate-secular-core.md
legacy/secular-core/: README.md
legacy/secular-core/include/: secular_core.h
legacy/secular-core/src/: mtu.rs  network.rs
legacy/secular-core/tests/: integration.rs
secular-android/: .gitignore  SPLIT_TUNNEL_INTEGRATION.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
secular-android/app/: build.gradle.kts  proguard-rules.pro
secular-android/app/src/main/: AndroidManifest.xml
secular-android/app/src/main/kotlin/com/adguard/trusttunnel/: DeepLink.kt  (+1 more)
secular-android/app/src/main/res/color/: accent_selected_bg.xml
secular-android/app/src/main/res/drawable/: connect_btn_bg.xml  connect_btn_connected_bg.xml  connect_btn_connecting_bg.xml  connect_glow_bg.xml  connect_ring.xml  default_badge_bg.xml  field_input_bg.xml  filter_popup_bg.xml  flag_circle_bg.xml  ic_add.xml  ic_add_circle.xml  ic_add_circle_outline.xml  ic_arrow_back.xml  ic_close.xml  ic_copy.xml  ic_eye_off.xml  ic_eye_on.xml  ic_file.xml  ic_file_upload.xml  ic_filter.xml  ic_gear.xml  ic_grid.xml  ic_home.xml  ic_log.xml  ic_qr.xml  ic_trash.xml  log_window_bg.xml  logo_green.xml  logo_white.xml  nav_home_circle.xml  ping_dot_bad.xml  ping_dot_bg.xml  ping_dot_excellent.xml  ping_dot_good.xml  ping_dot_ok.xml  scan_line_gradient.xml  scanner_frame_bg.xml  scroll_hint_bg.xml  selection_bar_bg.xml  server_card_bg.xml  (+3 more)
secular-android/app/src/main/res/layout/: activity_main.xml  activity_qr_scanner.xml  filter_popup.xml  fragment_add_server.xml  fragment_dashboard.xml  fragment_log.xml  fragment_qr_scanner.xml  fragment_server_config.xml  fragment_server_list.xml  item_log_line.xml  item_server.xml  or_divider.xml
secular-android/app/src/main/res/navigation/: nav_graph.xml
secular-android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
secular-android/gradle/wrapper/: gradle-wrapper.properties
secular-core/: Cargo.toml  build.rs
secular-core/src/: config.rs  dns.rs  ffi.rs  lib.rs  network.rs  protocol.rs  utls.rs
secular-core/tests/: integration.rs
secular-desktop/: index.html  package-lock.json  package.json  vite.config.ts
secular-desktop/scripts/: build.sh  setup-sudo.sh  sign.sh
secular-desktop/src/: App.tsx  main.tsx  style.css
secular-desktop/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
secular-desktop/src-tauri/icons/: icon.icns
secular-desktop/src-tauri/src/: commands.rs  main.rs  tray.rs  tray.rs.backup
secular-ios/: .gitignore
secular-ios/Secular/: ContentView.swift  Entitlements.plist  Info.plist  SecularApp.swift
secular-ios/Secular/Extensions/: Entitlements.plist  Info.plist  PacketTunnelProvider.swift
(+17 files in other folders)
