[package]
name = "secular-desktop"
version = "0.1.0"
edition = "2021"
description = "Secular VPN — cross-platform desktop client"

[dependencies]
tauri = { version = "=2.6.2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tauri-plugin-shell = "2.0.2"
secular-core = { path = "../../secular-core" }
tauri-runtime-wry = "=2.7.1"

[build-dependencies]
tauri-build = { version = "=2.6.2" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
